# plx905x-eeprom

./: .gitignore  AUTHORS  ChangeLog  MANIFEST  Makefile  Makefile.am  NEWS  README  README.md  acinclude.m4  configure.ac  dkms.conf.in  plx905x_main.c
driver/: Makefile.am  Makefile.kernel  kcompat.h  kcompat_pci.h  plx905x.c
